# submariner

./: WORKSPACE
client/: package.json  pubspec.yaml  rollup.config.js
client/public/: bundle.js  bundle.js.map  index.html
client/src/: game.js  main.js
client/web/: component.dart  index.html  login-page.dart  main.dart  styles.css
server/cmd/: BUILD.bazel  main.go
server/pkg/components/: BUILD.bazel  components.go
server/pkg/config/: BUILD.bazel  config.go
server/pkg/entity/: BUILD.bazel  entity.go
server/pkg/entity/types/: BUILD.bazel  world_tile.go
server/pkg/game/: BUILD.bazel  state.go
server/pkg/server/: BUILD.bazel  messages.go  server.go  server_test.go
server/pkg/systems/: BUILD.bazel  system.go
server/pkg/systems/namereader/: BUILD.bazel  name.go  name_test.go
server/pkg/world/: BUILD.bazel  world.go  world_test.go
