load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "messages.go",
    ],
    deps = [
        "//server/pkg/config:go_default_library",
        "//server/pkg/game:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_dgrijalva_jwtgo//:go_default_library",
    ],
    importpath = "github.com/chronojam/submariner/server/pkg/server",
    visibility = ["//visibility:public"]
)

go_test(
    name = "go_default_test",
    srcs = [
        "server_test.go",
    ],
    importpath = "github.com/chronojam/submariner/server/pkg/server",
    embed = [":go_default_library"],
)