load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "name.go",
    ],
    deps = [
        "//server/pkg/world:go_default_library",
    ],
    importpath = "github.com/chronojam/submariner/server/pkg/systems/namereader",
    visibility = ["//visibility:public"],
)


go_test(
    name = "go_default_test",
    srcs = [
        "name_test.go",
    ],
    deps = [
        "//server/pkg/components:go_default_library",
    ],
    importpath = "github.com/chronojam/submariner/server/pkg/systems/namereader",
    embed = [":go_default_library"],
)